# pokemon-showdown-wrapper

./: .gitignore  .prettierignore  LICENSE  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  smoke_test.py  tsconfig.json  validate_opponents.py
showdown_wrapper/: __init__.py  _allowed_moves.py  _errors.py  _pool.py  _resolver.py  _types.py  _worker.py
src-js/: custom-rules.ts  list-allowed-moves.ts  opponent-pool.ts  showdown-wrapper.ts  validate-opponents.ts
