[project]
name = "showdown_wrapper"
version = "0.1.0"
description = "Python client library for pokemon-showdown-wrapper stdio protocol"
requires-python = ">=3.13"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["showdown_wrapper*"]

[tool.setuptools.package-data]
showdown_wrapper = ["py.typed"]
